13-kube-challenge/deploy-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    role: api
    env: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      role: api
  template:
    metadata:
      labels:
        role: api
    spec:
      containers:
      - name: api
        image: cloudacademydevops/api:lab-v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    role: api
    env: demo
spec:
  ports:
   - protocol: TCP
     port: 8080
  selector:
    role: api
